cm4all-workshop (4.3) unstable; urgency=low

  * don't reconnect to database after non-fatal error

 --   

cm4all-workshop (4.2) unstable; urgency=low

  * merge release 3.5
  * fix assertion failure after database error
  * debian/rules: use dh_sphinxdoc

 -- Max Kellermann <mk@cm4all.com>  Tue, 21 May 2019 22:13:48 +0200

cm4all-workshop (4.1) unstable; urgency=low

  * feature freeze
  * fix shutdown hang when database is unreachable
  * log deprecation warning if /etc/default/cm4all-workshop is configured
  * debian: remove the deprecated .default file
  * debian: revoke world-read permissions from workshop.conf
  * debian: use debhelper 12

 -- Max Kellermann <mk@cm4all.com>  Thu, 07 Mar 2019 09:37:29 +0100

cm4all-workshop (4.0.3) unstable; urgency=low

  * merge release 3.4

 -- Max Kellermann <mk@cm4all.com>  Fri, 18 Jan 2019 14:48:41 +0100

cm4all-workshop (4.0.2) unstable; urgency=low

  * cron: fix bogus error "malformed MOUNT_UTS_NAMESPACE packet"
  * spawn: configurable resource limits CPUWeight, TasksMax, MemoryMax

 -- Max Kellermann <mk@cm4all.com>  Mon, 17 Dec 2018 19:28:34 +0100

cm4all-workshop (4.0.1) unstable; urgency=low

  * require PostgreSQL 9.6 or later
  * fix "std::bad_alloc" error after database connection loss
  * workshop: add column `time_started`
  * workshop: add rate limits

 -- Max Kellermann <mk@cm4all.com>  Tue, 13 Nov 2018 13:24:25 +0100

cm4all-workshop (3.5) unstable; urgency=low

  * migrate: fix compatibility with older PostgreSQL versions

 -- Max Kellermann <mk@cm4all.com>  Wed, 08 May 2019 17:56:28 +0200

cm4all-workshop (3.4) unstable; urgency=low

  * workshop: fix crash bug in control channel receiver

 -- Max Kellermann <mk@cm4all.com>  Fri, 04 Jan 2019 17:09:00 +0100

cm4all-workshop (3.3) unstable; urgency=low

  * workshop: fix race condition in control channel after process exit

 -- Max Kellermann <mk@cm4all.com>  Thu, 08 Nov 2018 14:54:15 +0100

cm4all-workshop (3.2) unstable; urgency=low
